--- a/public/css/main.css
+++ b/public/css/main.css
@@ -46,15 +46,9 @@ h1 {
 }
 
 .data {
+  padding : 0 50px;
+  font-family: 'Montserrat', sans-serif;
   border-bottom: 1px solid rgba(0, 0, 0, 0.4);
-}
-.data th {
-  cursor: pointer;
-  width: 100%;
-}
-.data ::after {
-  float: right;
-  content: "+";
 }
 
 .title {
