Profanity filter added, links created. User auth not done.

--- a/public/css/createpost.css
+++ b/public/css/createpost.css
@@ -26,6 +26,10 @@ body {
   margin-top: 5px;
   margin-bottom: 15px;
 }
+.createPostBox .button {
+  width: 45%;
+  display: inline-block;
+}
 .createPostBox textarea {
   max-height: 280px;
 }
