--- a/public/css/createpost.scss
+++ b/public/css/createpost.scss
@@ -24,6 +24,10 @@ body{
     margin-top: 5px;
     margin-bottom: 15px;
   }
+  .button{
+    width : 45%;
+    display: inline-block;
+  }
   textarea{
     max-height: 280px;
   }
