--- a/views/index.html
+++ b/views/index.html
@@ -23,6 +23,8 @@
         <label for="password">Password <a href="#" class="passwdLink">Forgot Password?</a></label>
         <input type="password" name="password" id="password" class="inputBox" required>
         <input type="submit" name="submit" id="submit" value="Log In" class="btn">
+        <br>
+        <span>Don't have an account? <a href="/register">Register now!</a></span>
       </form>
     </div>
   </div>
