--- a/public/css/index.scss
+++ b/public/css/index.scss
@@ -66,3 +66,9 @@ input {
   background: darken(#28a745, 10%);
   background-image: linear-gradient(-180deg,#34d058,#28a745 95%);
 }
+.error{
+  width: 100%;
+  padding : 5px;
+  background: red;
+  border-radius: 5px;
+}
