--- a/views/forums.ejs
+++ b/views/forums.ejs
@@ -16,7 +16,7 @@
 
 <body>
   <nav class="navbar navbar-fixed navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">DiscussionForum</a>
+    <a class="navbar-brand" href="/forums">DiscussionForum</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -24,21 +24,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/forums">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Announcements</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Topics
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Subject 1</a>
-            <a class="dropdown-item" href="#">Subject 2</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">All Subjects</a>
-          </div>
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
@@ -51,12 +40,15 @@
   </nav>
   <div class="container">
     <h1>Forum</h1>
+    <div class="postButton">
+      <a href="/createpost"><button type="button" name="button">Create new post!</button></a>
+    </div>
     <div class="topicsBox">
       <table class="topicsTable">
         <tr class="title">
           <th class="titleForums">Title</th>
           <th class="titleTopic">Category</th>
-          <th class="titlePosts">Author</th>
+          <th class="titlePosts">Post</th>
         </tr>
         <% for(var e in results){ %>
         <tr>
