--- a/views/createpost.html
+++ b/views/createpost.html
@@ -44,14 +44,18 @@
       <label for="title">Title</label>
       <input type="text" name="title" required>
       <label for="category">Category</label>
-      <select placeholder='select' id="category" name='category'>
+      <select placeholder='select' id="category" name='category' onchange="showOther()">
         <option value='PIC'>C Programming</option>
         <option value="Python">Python</option>
         <option value="DBMS">DBMS</option>
         <option value="CN">Computer Networks</option>
         <option value="UNIX">UNIX</option>
         <option value="Java">Java</option>
+        <br>
+        <option value="Other">Other</option>
       </select>
+      <label for="other" class="other" id='showlabel'>Enter Category</label>
+      <input type="text" name="other" id='showtext' class="other">
       <label for="post">Message/Question</label>
       <textarea name="post" id="post" cols="30" rows="6" required></textarea>
       <a href="/forums"><input type="button" class="btn-success button" name="back" value="Go back to forums."></a>
@@ -59,5 +63,14 @@
     </form>
   </div>
 </body>
+<script type="text/javascript">
+  function showOther() {
+    if (document.getElementById('category').value == 'Other') {
+      document.getElementById('showtext').classList.remove('other');
+      document.getElementById('showlabel').classList.remove('other');
+      document.getElementById('showtext').required = true;
+    }
+  }
+</script>
 
 </html>
