--- a/views/forums.ejs
+++ b/views/forums.ejs
@@ -32,6 +32,8 @@
       </ul>
       <form class="form-inline my-2 my-lg-0">
         <div class="searchBox">
+          <span>Welcome,
+            <%=user%>!</span>
           <input class="form-control" type="search" placeholder="Search" aria-label="Search">
           <button class="btn" type="submit"><i class="fas fa-search"></i></button>
         </div>
